--- a/styles/variables.less
+++ b/styles/variables.less
@@ -5,3 +5,10 @@
 @ff-border:   ~".ff-style-border";
 @ff-caret:    ~".ff-style-caret";
 @ff-hide:     ~".ff-style-none";
+
+// Helper classes for position-specific adjustments
+@ff-leading:  ~".syntax--leading";
+@ff-trailing: ~".syntax--trailing";
+@ff-isolated: ~".syntax--isolated";
+@ff-padded:   ~".syntax--padded";
+@ff-unpadded: ~".syntax--unpadded";
